基础错误修复